@@ -49,6 +49,7 @@ Date: 2025-12-07
     - Took a sledgehammer to the recipes that make polonium-210, to make their ratios actually usable by anything that isnt fuel cells.
     - Lowered amount of sulfuric used in bastanite seperation from 20 to 15.
     - Lowered crafting time of bastanite from 18s to 12s, and lowered amount of TM ore it needs.
+    - Lowered tungsten heating coils energy consumption from 100% to 75%.
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
